<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.GridLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="10"
        app:orientation="vertical"
        android:stretchColumns="*">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_1"
            android:id="@+id/textDescription_1"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:padding="16dp"
            app:layout_gravity="center_horizontal" />

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextServer"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:text="@string/edit_hint_1"
            android:inputType="textUri"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_2"
            android:id="@+id/textDescription_2"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:padding="16dp"
            app:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRequestBody"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:text="@string/edit_hint_2"
            android:inputType="text"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_3"
            android:id="@+id/textView2"
            app:layout_row="4"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"
            android:padding="16dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="5"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:orientation="horizontal"
            app:layout_gravity="center"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_get"
                android:id="@+id/radioButtonGet"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_post"
                android:id="@+id/radioButtonPost" />
        </RadioGroup>

        <Button
            android:layout_height="wrap_content"
            android:text="@string/text_download"
            android:id="@+id/buttonDownload"
            app:layout_row="6"
            app:layout_columnSpan="2"
            app:layout_column="0"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/text_get"
            android:id="@+id/buttonGet"
            app:layout_row="7"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:visibility="invisible" />


        <Button
            android:layout_height="wrap_content"
            android:text="@string/text_post"
            android:id="@+id/buttonPost"
            app:layout_row="7"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:visibility="invisible" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/text_go"
            android:id="@+id/buttonGo"
            app:layout_row="8"
            app:layout_columnSpan="2"
            app:layout_column="0"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/text_dialog"
            android:id="@+id/buttonDialog"
            app:layout_row="8"
            app:layout_columnSpan="2"
            app:layout_column="0"
            app:layout_gravity="fill_horizontal" />
    </android.support.v7.widget.GridLayout>

</ScrollView>